[ADD] pms_w_s: errors management
Errors can now be shown in the log file and properly to the user.
On the /rooms page and /booking page

--- a/pms_website_sale/templates/pms_booking_engine_templates.xml
+++ b/pms_website_sale/templates/pms_booking_engine_templates.xml
@@ -9,6 +9,7 @@
                         <t t-set="step" t-value="1" />
                     </t>
                 </div>
+                <t t-call="pms_website_sale.pms_booking_engine_errors" />
                 <div name="booking" class="row">
                     <div name="booking_table" class="col col-md-9">
                         <t t-call="pms_website_sale.pms_booking_engine_table">
