[IMP] pmw_w_s: remove is_published

--- a/pms_website_sale/views/pms_room_type_views.xml
+++ b/pms_website_sale/views/pms_room_type_views.xml
@@ -3,29 +3,6 @@
      SPDX-License-Identifier: AGPL-3.0-or-later
      -->
 <odoo>
-    <record id="pms_room_type_view_search" model="ir.ui.view">
-        <field name="name">pms.room.type.search</field>
-        <field name="model">pms.room.type</field>
-        <field name="inherit_id" ref="pms.pms_room_type_view_search"/>
-        <field name="arch" type="xml">
-            <xpath expr="//search" position="inside">
-                <filter string="Published" name="published" domain="[('is_published', '=', True)]"/>
-            </xpath>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="pms_room_type_view_tree">
-        <field name="name">pms.room.type.tree</field>
-        <field name="model">pms.room.type</field>
-        <field name="inherit_id" ref="pms.pms_room_type_view_tree"/>
-        <field name="arch" type="xml">
-            <field name="default_code" position="after">
-                <field name="website_id" groups="website.group_multi_website" optional="show"/>
-                <field name="is_published" string="Is Published" widget="boolean_toggle" optional="hide"/>
-            </field>
-        </field>
-    </record>
-
     <record model="ir.ui.view" id="pms_room_type_view_form">
         <field name="name">pms.room.type.form</field>
         <field name="model">pms.room.type</field>
@@ -34,11 +11,13 @@
             <xpath expr="//group" position="before">
                 <!-- In combination with an oe_title div this could look a lot nicer, but
                 this would require some changes in pms. -->
-                <field name="image_1920" widget="image" class="oe_avatar" options="{'preview_image': 'image_128'}"/>
+                <field
+                    name="image_1920"
+                    widget="image"
+                    class="oe_avatar"
+                    options="{'preview_image': 'image_128'}"
+                />
             </xpath>
-            <field name="class_id" position="after">
-                <field name="is_published" widget="boolean_toggle" />
-            </field>
             <xpath expr="//group[@name='accounting_group']/.." position="after">
                 <group colspan="4">
                     <field name="short_description" />
@@ -47,6 +26,7 @@
             </xpath>
             <xpath expr="//notebook" position="inside">
                 <page name="media" string="Media">
+                    <!-- fixme introduces dependency to website_sale-->
                     <field name="product_template_image_ids" class="o_website_sale_image_list" context="{'default_name': name}" mode="kanban" options="{'create_text':'Add a Media'}" nolabel="1"/>
                 </page>
             </xpath>
