--- a/pms_website_sale/templates/pms_common_templates.xml
+++ b/pms_website_sale/templates/pms_common_templates.xml
@@ -13,7 +13,7 @@
         <div class="col-xl">
             <div class="wizard">
                 <div class="progress-wizard">
-                    <a class="no-decoration" href="#">
+                    <a class="no-decoration" href="/booking">
                         <div
                             id="wizard-review"
                             t-att-class="'progress-wizard-step ' + ('inactive' if step &lt; 1 else ('active' if step == 1 else 'complete'))"
@@ -28,7 +28,10 @@
                             </div>
                         </div>
                     </a>
-                    <a class="no-decoration" href="#">
+                    <a
+                        class="no-decoration"
+                        t-att-href="'/booking/address' if step > 5 else '#'"
+                    >
                         <div
                             id="wizard-address"
                             t-att-class="'progress-wizard-step ' + ('inactive' if step &lt; 5 else ('active' if step == 5 else 'complete'))"
@@ -41,7 +44,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="no-decoration" href="#">
+                    <div class="no-decoration" href="#">
                         <div
                             id="wizard-confirm"
                             t-att-class="'progress-wizard-step ' + ('inactive' if step &lt; 10 else ('active' if step == 10 else 'complete'))"
@@ -55,8 +58,26 @@
                             >Confirm Booking
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </template>
+
+    <template id="partner_summary">
+        <div class="row">
+            <div class="col col-8">
+                <h3>Contact</h3>
+                <span
+                    t-field="booking_engine.partner_id"
+                    t-options='{"widget": "contact", "fields": ["name", "address", "phone", "email"], "no_marker": True, "phone_icons": True}'
+                    name="booking_partner_address"
+                />
+            </div>
+            <div class="col col-4 text-right">
+                <a href="/booking/address">
+                    <button class="btn btn-light ">Edit</button>
+                </a>
             </div>
         </div>
     </template>
@@ -64,33 +85,48 @@
     <template id="pms_booking_engine_summary">
         <div class="row">
             <div class="col">
-                <div name="total">
-                    <h2>Total</h2>
-                    <t t-if="booking_engine">
-                        <span
-                            t-esc="booking_engine.total_price_folio"
-                            t-options='{"widget": "monetary", "display_currency": website.currency_id}'
-                        />
-                    </t>
-                    <t t-else="">
-                        <span
-                            t-esc="int(0)"
-                            t-options='{"widget": "monetary", "display_currency": website.currency_id}'
-                        />
-                    </t>
-                </div>
-                <div>
-                    <t t-if="booking_engine">
-                        <a class="btn btn-primary" href="/booking/address">Next</a>
-                        <a
-                            class="btn btn-secondary"
-                            t-attf-href="/rooms?start_date={{ booking_engine.start_date }}&amp;end_date={{ booking_engine.end_date }}"
-                        >
+
+                <div name="total" class="row justify-content-between">
+                    <div class="col col-auto">
+                        <h3>Total</h3>
+                        <t t-if="booking_engine">
+                            <span
+                                t-esc="booking_engine.total_price_folio"
+                                t-options='{"widget": "monetary", "display_currency": website.currency_id}'
+                            />
+                        </t>
+                        <t t-else="">
+                            <span
+                                t-esc="int(0)"
+                                t-options='{"widget": "monetary", "display_currency": website.currency_id}'
+                            />
+                        </t>
+                    </div>
+                    <div class="col col-auto">
+                        <t t-if="booking_engine">
+                            <a
+                                class="btn btn-secondary"
+                                t-attf-href="/rooms?start_date={{ booking_engine.start_date }}&amp;end_date={{ booking_engine.end_date }}"
+                            >
                                 Add other rooms
-                        </a>
-                    </t>
-                    <t t-else="">
-                        <a class="btn btn-secondary" href="/rooms">Add other rooms</a>
+                            </a>
+                        </t>
+                        <t t-else="">
+                            <a class="btn btn-secondary" href="/rooms">Add other rooms
+                            </a>
+                        </t>
+                    </div>
+                    <t t-if="booking_engine">
+                        <div name="partner_summary" class="row">
+                            <div class="col">
+                                <t t-call="pms_website_sale.partner_summary">
+                                    <t
+                                        t-set="partner"
+                                        t-value="booking_engine.partner_id"
+                                    />
+                                </t>
+                            </div>
+                        </div>
                     </t>
                 </div>
             </div>
@@ -121,4 +157,62 @@
         </div>
     </template>
 
+    <template id="pms_booking_engine_table">
+        <table name="booking_engine_table" class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Room</th>
+                    <th scope="col">Checkin</th>
+                    <th scope="col">Checkout</th>
+                    <th scope="col">Number</th>
+                    <th scope="col">Price</th>
+                    <th scope="col" />
+                </tr>
+            </thead>
+            <tbody>
+                <t t-foreach="availability_results" t-as="availability_result">
+                    <t t-if="availability_result.value_num_rooms_selected > 0">
+                        <tr>
+                            <th
+                                scope="row"
+                                t-esc="availability_result.room_type_id.name"
+                            />
+                            <td
+                                t-esc="availability_result.checkin"
+                                t-options='{"widget":"date"}'
+                            />
+                            <td
+                                t-esc="availability_result.checkout"
+                                t-options='{"widget":"date"}'
+                            />
+                            <td t-esc="availability_result.value_num_rooms_selected" />
+                            <td>
+                                <span
+                                    t-field="availability_result.price_total"
+                                    t-options='{"widget": "monetary", "display_currency": website.currency_id}'
+                                />
+                            </td>
+                            <td>
+                                <form method="post">
+                                    <input
+                                        type="hidden"
+                                        name="csrf_token"
+                                        t-att-value="request.csrf_token()"
+                                    />
+                                    <input
+                                        type="hidden"
+                                        name="delete"
+                                        t-att-value="availability_result.room_type_id.id"
+                                    />
+                                    <button type="submit" class="btn">
+                                        <span class="fa fa-trash" />
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    </t>
+                </t>
+            </tbody>
+        </table>
+    </template>
 </odoo>
